# ttgt-api

./: .gitignore  README.md  api_tags.py  config.default.toml  filenames.json  items.json  main.py  manager.py  requirements.txt  run.sh  schedule.json  teachers.txt  utils.py
applications/: android.apk  updates.json
database/: __init__.py  database.sqlite
linux-scripts/: run.sh  update-all.sh
models/: api.py  database.py
routes/: admin.py  auth.py  content.py  files.py  websocket.py
routes/admin/: __init__.py  news.py  posts.py  teachers.py  vacancies.py
routes/content/: __init__.py  news.py  posts.py  vacancies.py
src/: __init__.py  api_tags.py  database.py  main.py  manager.py  utils.py
src/models/: api.py  database.py
src/native/: Cargo.toml  __init__.py  build.sh  rustfmt.toml
src/native/src/: lib.rs  schedule.rs  types.rs
src/routes/: auth.py  feedback.py  files.py  settings.py  websocket.py
src/routes/admin/: __init__.py  fixed_files.py  posts.py  settings.py  teachers.py  vacancies.py
src/routes/content/: __init__.py  posts.py  vacancies.py
src/routes/courses/: __init__.py
src/routes/schedule/: __init__.py  downloader.py  overrides_downloader.py  overrides_parser.py  schedule_parser.py  schedule_parser_deprecated.py  teacher_overrides.py
windows-scripts/: run.bat  setup.bat
